--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: huayra-icon-theme
 Section: misc
 Priority: optional
 Maintainer: Mauro Lizaur <mauro@debian.org>
-Build-Depends: debhelper (>= 8)
+Build-Depends: debhelper (>= 8), imagemagick (>= 8:6.7.7.10-5), findutils (>= 4.4.2-4), bash (>= 4.2-4)
 Standards-Version: 3.9.3
 
 Package: huayra-icon-theme
@@ -16,3 +16,15 @@ Depends: ${misc:Depends}
 Architecture: all
 Description: Tema de iconos alternativo para Huayra GNU/Linux
  Este es el tema de iconos alternativo utilizado en Huayra GNU/Linux.
+
+Package: huayra-icon-theme-fresco-verde
+Depends: ${misc:Depends}
+Architecture: all
+Description: Tema de iconos Fresco Verde para Huayra GNU/Linux
+ Este es el tema de iconos Fresco Verde utilizado en Huayra GNU/Linux.
+
+Package: huayra-icon-theme-mayo
+Depends: ${misc:Depends}
+Architecture: all
+Description: Tema de iconos Mayo para Huayra GNU/Linux
+ Este es el tema de iconos Mayo utilizado en Huayra GNU/Linux.
