--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: huayra-icon-theme
 Section: misc
 Priority: optional
 Maintainer: Mauro Lizaur <mauro@debian.org>
-Build-Depends: debhelper (>= 8), imagemagick (>= 8:6.7.7.10-5), findutils (>= 4.4.2-4), bash (>= 4.2-4)
+Build-Depends: debhelper (>= 8), dpkg-dev ()
+Build-Depends-Indep: imagemagick (>= 8:6.7.7.10-5), findutils (>= 4.4.2-4), bash (>= 4.2-4)
 Standards-Version: 3.9.3
 
 Package: huayra-icon-theme
@@ -10,6 +11,20 @@ Depends: ${misc:Depends}
 Architecture: all
 Description: Tema de iconos para Huayra GNU/Linux
  Este es el tema de iconos utilizado en Huayra GNU/Linux.
+
+Package: huayra-icon-theme-all
+Depends: ${misc:Depends}, huayra-icon-theme, huayra-icon-theme-alternativo, 
+         huayra-icon-theme-mayo, huayra-icon-theme-fresco-verde
+Architecture: all
+Description: Todos los temas de iconos para Huayra GNU/Linux
+ Este dummy paquete instalara todos los temas de iconos 
+ realizados para Huayra GNU/Linux.
+ .
+ Temas disponibles:
+ - huayra-icon-theme
+ - huayra-icon-theme-alternativo
+ - huayra-icon-theme-mayo
+ - huayra-icon-theme-fresco-verde
 
 Package: huayra-icon-theme-alternativo
 Depends: ${misc:Depends}
