--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,10 @@
 Source: huayra-icon-theme
 Section: misc
 Priority: optional
-Maintainer: Mauro Lizaur <mauro@debian.org>
-Build-Depends: debhelper (>= 8)
-Build-Depends-Indep: imagemagick (>= 8:6.7.7.10-3), findutils (>= 4.4.2-4), bash (>= 4.2-4)
+Maintainer: Fernando Toledo <ragnarok@docksud.com.ar>
 Standards-Version: 3.9.3
-
-Package: huayra-icon-theme
-Depends: ${misc:Depends}
-Architecture: all
-Description: Tema de iconos para Huayra GNU/Linux
- Este es el tema de iconos utilizado en Huayra GNU/Linux.
+Build-Depends: debhelper (>= 8)
+Build-Depends-Indep: imagemagick (>= 8:6.7.7.10-3), findutils (>= 4.4.2-4), bash (>= 4.2-4), librsvg2-bin
 
 Package: huayra-icon-theme-all
 Depends: ${misc:Depends}, huayra-icon-theme, huayra-icon-theme-mayo, 
@@ -25,11 +19,11 @@ Description: Todos los temas de iconos para Huayra GNU/Linux
  - huayra-icon-theme-mayo
  - huayra-icon-theme-fresco-verde
 
-Package: huayra-icon-theme-alternativo
+Package: huayra-icon-theme
 Depends: ${misc:Depends}
 Architecture: all
-Description: Tema de iconos alternativo para Huayra GNU/Linux
- Este es el tema de iconos alternativo utilizado en Huayra GNU/Linux.
+Description: Tema de iconos para Huayra GNU/Linux
+ Este es el tema de iconos utilizado en Huayra GNU/Linux.
 
 Package: huayra-icon-theme-fresco-verde
 Depends: ${misc:Depends}
@@ -43,8 +37,3 @@ Architecture: all
 Description: Tema de iconos Mayo para Huayra GNU/Linux
  Este es el tema de iconos Mayo utilizado en Huayra GNU/Linux.
 
-Package: huayra-apps-icons
-Depends: ${misc:Depends}
-Architecture: all
-Description: Iconos de aplicaciones para Huayra GNU/Linux
- En este paquete se distribuyen los iconos utilizado en Huayra GNU/Linux.
