--- a/debian/control
+++ b/debian/control
@@ -4,10 +4,12 @@ Priority: optional
 Maintainer: Fernando Toledo <ragnarok@docksud.com.ar>
 Standards-Version: 3.9.4
 Build-Depends: debhelper (>= 8)
-Build-Depends-Indep: findutils (>= 4.4.2-4), bash (>= 4.2-4), inkscape
+Build-Depends-Indep: findutils (>= 4.4.2-4), bash (>= 4.2-4), inkscape, imagemagick
 
 Package: huayra-icon-theme-all
 Depends: ${misc:Depends},
+    huayra-icon-theme-accesible,
+    huayra-icon-theme-limbo,
     huayra-icon-theme-mayo,
     huayra-icon-theme-fresco-verde,
     huayra-icon-theme-violeta,
@@ -18,6 +20,8 @@ Description: Todos los temas de iconos para Huayra GNU/Linux
  realizados para Huayra GNU/Linux.
  .
  Temas disponibles:
+  - huayra-icon-theme-accesible
+  - huayra-icon-theme-limbo
   - huayra-icon-theme-mayo
   - huayra-icon-theme-fresco-verde
   - huayra-icon-theme-violeta
@@ -46,3 +50,15 @@ Depends: ${misc:Depends}
 Architecture: all
 Description: Tema de iconos violeta (versián 2) para Huayra GNU/Linux
  Este es el tema de iconos Violeta (versión 2) utilizado en Huayra GNU/Linux.
+
+Package: huayra-icon-theme-limbo
+Depends: ${misc:Depends}
+Architecture: all
+Description: Tema de iconos Limbo para Huayra GNU/Linux
+ Este es el tema de iconos Limbo utilizado en Huayra GNU/Linux.
+
+Package: huayra-icon-theme-accesible
+Depends: ${misc:Depends}
+Architecture: all
+Description: Tema de iconos accesible para Huayra GNU/Linux
+ Este es el tema de iconos accesible utilizado en Huayra GNU/Linux.
