--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,8 @@ Depends: ${misc:Depends},
     huayra-icon-theme-mayo,
     huayra-icon-theme-fresco-verde,
     huayra-icon-theme-violeta,
-    huayra-icon-theme-violeta-v2
+    huayra-icon-theme-violeta-v2,
+    huayra-icon-theme-liso
 Architecture: all
 Description: Todos los temas de iconos para Huayra GNU/Linux
  Este paquete (dummy) instalará todos los temas de iconos 
@@ -28,6 +29,7 @@ Description: Todos los temas de iconos para Huayra GNU/Linux
   - huayra-icon-theme-fresco-verde
   - huayra-icon-theme-violeta
   - huayra-icon-theme-violeta-v2
+  - huayra-icon-theme-liso
 
 Package: huayra-icon-theme-fresco-verde
 Depends: ${misc:Depends}
@@ -64,3 +66,9 @@ Depends: ${misc:Depends}
 Architecture: all
 Description: Tema de iconos accesible para Huayra GNU/Linux
  Este es el tema de iconos accesible utilizado en Huayra GNU/Linux.
+
+Package: huayra-icon-theme-liso
+Depends: ${misc:Depends}
+Architecture: all
+Description: Tema de iconos Liso para Huayra GNU/Linux
+ Este es el tema de iconos con estética Flat utilizado en Huayra GNU/Linux.
