--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,8 @@ Depends: ${misc:Depends},
     huayra-icon-theme-fresco-verde,
     huayra-icon-theme-violeta,
     huayra-icon-theme-violeta-v2,
-    huayra-icon-theme-liso
+    huayra-icon-theme-liso,
+    huayra-icon-theme-ocho
 Architecture: all
 Description: Todos los temas de iconos para Huayra GNU/Linux
  Este paquete (dummy) instalará todos los temas de iconos 
@@ -30,6 +31,7 @@ Description: Todos los temas de iconos para Huayra GNU/Linux
   - huayra-icon-theme-violeta
   - huayra-icon-theme-violeta-v2
   - huayra-icon-theme-liso
+  - huayra-icon-theme-ocho
 
 Package: huayra-icon-theme-fresco-verde
 Depends: ${misc:Depends}
@@ -72,3 +74,9 @@ Depends: ${misc:Depends}
 Architecture: all
 Description: Tema de iconos Liso para Huayra GNU/Linux
  Este es el tema de iconos con estética Flat utilizado en Huayra GNU/Linux.
+
+Package: huayra-icon-theme-ocho
+Depends: ${misc:Depends}
+Architecture: all
+Description: Tema de iconos Ocho para Huayra GNU/Linux
+ Este es el tema de iconos con estética 8 bits utilizado en Huayra GNU/Linux.
